# MachineLearningCpp

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt  Line.h  Point.h  VectorUtilities.h  main.cpp
Eigen/: CMakeLists.txt  EigenLinearRegression.cpp  EigenLinearRegression.h  PolynomialFitting.cpp  PolynomialFitting.h  main.cpp
Experiments/: CMakeLists.txt
LinearRegression/: CMakeLists.txt  LinearRegression.cpp  LinearRegression.h  main.cpp
Utilities/: CMakeLists.txt  HexConverter.cpp  HexConverter.h  PerfUtilities.cpp  PerfUtilities.h  StringUtilities.cpp  Utilities.cpp  Utilities.h  main.cpp
